[project]
name = "llm-openai-via-codex"
version = "0.1a0"
description = "Access OpenAI models via a Codex subscription"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.10"
dependencies = [
    "llm",
    "openai>=2.31.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.urls]
Homepage = "https://github.com/simonw/llm-openai-via-codex"
Changelog = "https://github.com/simonw/llm-openai-via-codex/releases"
Issues = "https://github.com/simonw/llm-openai-via-codex/issues"
CI = "https://github.com/simonw/llm-openai-via-codex/actions"

[project.entry-points.llm]
openai_via_codex = "llm_openai_via_codex"

[dependency-groups]
dev = ["pytest"]
